Add Larastan config and strengthen payload typing

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,10 @@
       "Codepreneur\\CasysPay\\": "src/"
     }
   },
+  "require-dev": {
+    "laravel/pint": "^1.22",
+    "nunomaduro/larastan": "^2.11"
+  },
   "extra": {
     "laravel": {
       "providers": [
