--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "require": {
     "php": "^8.4",
-    "illuminate/support": "^11.0",
-    "illuminate/http": "^11.0"
+    "illuminate/support": "^11.0 || ^12.0",
+    "illuminate/http": "^11.0 || ^12.0"
   },
   "autoload": {
     "psr-4": {
