--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     }
   },
   "require-dev": {
-    "laravel/pint": "^1.22",
-    "nunomaduro/larastan": "^2.11"
+    "laravel/pint": "^1.27"
   },
   "extra": {
     "laravel": {
